// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`after fetch hideWriteControls 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      horizontalPosition="center"
      panelPaddingSize="l"
    >
      <EuiText
        grow={true}
        size="m"
      >
        <h2>
          <EuiTextColor
            color="subdued"
            component="span"
          >
            <FormattedMessage
              defaultMessage="Looks like you don't have any dashboards."
              id="kbn.dashboard.listing.noDashboardsItemsMessage"
              values={Object {}}
            />
          </EuiTextColor>
        </h2>
      </EuiText>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`after fetch initialFilter 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      horizontalPosition="center"
      panelPaddingSize="l"
    >
      <div>
        <EuiFlexGroup
          alignItems="flexEnd"
          component="div"
          data-test-subj="top-nav"
          direction="row"
          gutterSize="l"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiTitle
              size="l"
              textTransform="none"
            >
              <h1>
                <FormattedMessage
                  defaultMessage="Dashboards"
                  id="kbn.dashboard.listing.dashboardsTitle"
                  values={Object {}}
                />
              </h1>
            </EuiTitle>
          </EuiFlexItem>
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiButton
              color="primary"
              data-test-subj="newDashboardLink"
              fill={true}
              href="#/dashboard"
              iconSide="left"
              type="button"
            >
              <FormattedMessage
                defaultMessage="Create new dashboard"
                id="kbn.dashboard.listing.createNewDashboardButtonLabel"
                values={Object {}}
              />
            </EuiButton>
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          direction="row"
          gutterSize="l"
          justifyContent="flexStart"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={true}
          >
            <EuiFieldSearch
              aria-label="Filter dashboards"
              compressed={false}
              data-test-subj="searchFilter"
              fullWidth={true}
              incremental={false}
              isLoading={false}
              onChange={[Function]}
              placeholder="Search…"
              value="my dashboard"
            />
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiBasicTable
          columns={
            Array [
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
                "sortable": true,
              },
              Object {
                "dataType": "string",
                "field": "description",
                "name": "Description",
                "sortable": true,
              },
              Object {
                "actions": Array [
                  Object {
                    "render": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          itemId="id"
          items={
            Array [
              Object {
                "description": "dashboard0 desc",
                "id": "dashboard0",
                "title": "dashboard0 title",
              },
              Object {
                "description": "dashboard1 desc",
                "id": "dashboard1",
                "title": "dashboard1 title",
              },
            ]
          }
          loading={false}
          noItemsMessage={
            <FormattedMessage
              defaultMessage="No dashboards matched your search."
              id="kbn.dashboard.listing.noMatchedDashboardsMessage"
              values={Object {}}
            />
          }
          onChange={[Function]}
          pagination={
            Object {
              "pageIndex": 0,
              "pageSize": 20,
              "pageSizeOptions": Array [
                10,
                20,
                50,
              ],
              "totalItemCount": 2,
            }
          }
          responsive={true}
          selection={
            Object {
              "onSelectionChange": [Function],
            }
          }
          sorting={Object {}}
        />
      </div>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`after fetch renders call to action when no dashboards exist 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      horizontalPosition="center"
      panelPaddingSize="l"
    >
      <div>
        <EuiEmptyPrompt
          actions={
            <EuiButton
              color="primary"
              data-test-subj="createDashboardPromptButton"
              fill={true}
              href="#/dashboard"
              iconSide="left"
              iconType="plusInCircle"
              type="button"
            >
              <FormattedMessage
                defaultMessage="Create new dashboard"
                id="kbn.dashboard.listing.createNewDashboard.createButtonLabel"
                values={Object {}}
              />
            </EuiButton>
          }
          body={
            <React.Fragment>
              <p>
                <FormattedMessage
                  defaultMessage="You can combine data views from any Kibana app into one dashboard and see everything in one place."
                  id="kbn.dashboard.listing.createNewDashboard.combineDataViewFromKibanaAppDescription"
                  values={Object {}}
                />
              </p>
              <p>
                <FormattedMessage
                  defaultMessage="New to Kibana? {sampleDataInstallLink} to take a test drive."
                  id="kbn.dashboard.listing.createNewDashboard.newToKibanaDescription"
                  values={
                    Object {
                      "sampleDataInstallLink": <EuiLink
                        color="primary"
                        href="#/home/tutorial_directory/sampleData"
                        type="button"
                      >
                        <FormattedMessage
                          defaultMessage="Install some sample data"
                          id="kbn.dashboard.listing.createNewDashboard.sampleDataInstallLinkText"
                          values={Object {}}
                        />
                      </EuiLink>,
                    }
                  }
                />
              </p>
            </React.Fragment>
          }
          iconColor="subdued"
          iconType="dashboardApp"
          title={
            <h2>
              <FormattedMessage
                defaultMessage="Create your first dashboard"
                id="kbn.dashboard.listing.createNewDashboard.title"
                values={Object {}}
              />
            </h2>
          }
        />
      </div>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`after fetch renders table rows 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      horizontalPosition="center"
      panelPaddingSize="l"
    >
      <div>
        <EuiFlexGroup
          alignItems="flexEnd"
          component="div"
          data-test-subj="top-nav"
          direction="row"
          gutterSize="l"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiTitle
              size="l"
              textTransform="none"
            >
              <h1>
                <FormattedMessage
                  defaultMessage="Dashboards"
                  id="kbn.dashboard.listing.dashboardsTitle"
                  values={Object {}}
                />
              </h1>
            </EuiTitle>
          </EuiFlexItem>
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiButton
              color="primary"
              data-test-subj="newDashboardLink"
              fill={true}
              href="#/dashboard"
              iconSide="left"
              type="button"
            >
              <FormattedMessage
                defaultMessage="Create new dashboard"
                id="kbn.dashboard.listing.createNewDashboardButtonLabel"
                values={Object {}}
              />
            </EuiButton>
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          direction="row"
          gutterSize="l"
          justifyContent="flexStart"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={true}
          >
            <EuiFieldSearch
              aria-label="Filter dashboards"
              compressed={false}
              data-test-subj="searchFilter"
              fullWidth={true}
              incremental={false}
              isLoading={false}
              onChange={[Function]}
              placeholder="Search…"
              value=""
            />
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiBasicTable
          columns={
            Array [
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
                "sortable": true,
              },
              Object {
                "dataType": "string",
                "field": "description",
                "name": "Description",
                "sortable": true,
              },
              Object {
                "actions": Array [
                  Object {
                    "render": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          itemId="id"
          items={
            Array [
              Object {
                "description": "dashboard0 desc",
                "id": "dashboard0",
                "title": "dashboard0 title",
              },
              Object {
                "description": "dashboard1 desc",
                "id": "dashboard1",
                "title": "dashboard1 title",
              },
            ]
          }
          loading={false}
          noItemsMessage={
            <FormattedMessage
              defaultMessage="No dashboards matched your search."
              id="kbn.dashboard.listing.noMatchedDashboardsMessage"
              values={Object {}}
            />
          }
          onChange={[Function]}
          pagination={
            Object {
              "pageIndex": 0,
              "pageSize": 20,
              "pageSizeOptions": Array [
                10,
                20,
                50,
              ],
              "totalItemCount": 2,
            }
          }
          responsive={true}
          selection={
            Object {
              "onSelectionChange": [Function],
            }
          }
          sorting={
            Object {
              "sort": Object {
                "direction": "asc",
                "field": "title",
              },
            }
          }
        />
      </div>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`after fetch renders warning when listingLimit is exceeded 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  >
    <EuiPageContent
      horizontalPosition="center"
      panelPaddingSize="l"
    >
      <div>
        <EuiFlexGroup
          alignItems="flexEnd"
          component="div"
          data-test-subj="top-nav"
          direction="row"
          gutterSize="l"
          justifyContent="spaceBetween"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiTitle
              size="l"
              textTransform="none"
            >
              <h1>
                <FormattedMessage
                  defaultMessage="Dashboards"
                  id="kbn.dashboard.listing.dashboardsTitle"
                  values={Object {}}
                />
              </h1>
            </EuiTitle>
          </EuiFlexItem>
          <EuiFlexItem
            component="div"
            grow={false}
          >
            <EuiButton
              color="primary"
              data-test-subj="newDashboardLink"
              fill={true}
              href="#/dashboard"
              iconSide="left"
              type="button"
            >
              <FormattedMessage
                defaultMessage="Create new dashboard"
                id="kbn.dashboard.listing.createNewDashboardButtonLabel"
                values={Object {}}
              />
            </EuiButton>
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiCallOut
          color="warning"
          iconType="help"
          size="m"
          title={
            <FormattedMessage
              defaultMessage="Listing limit exceeded"
              id="kbn.dashboard.listing.listingLimitExceededTitle"
              values={Object {}}
            />
          }
        >
          <p>
            <FormattedMessage
              defaultMessage="You have {totalDashboards} dashboards, but your {listingLimitText} setting prevents the table below from displaying more than {listingLimitValue}. You can change this setting under {advancedSettingsLink}."
              id="kbn.dashboard.listing.listingLimitExceededDescription"
              values={
                Object {
                  "advancedSettingsLink": <EuiLink
                    color="primary"
                    href="#/management/kibana/settings"
                    type="button"
                  >
                    <FormattedMessage
                      defaultMessage="Advanced Settings"
                      id="kbn.dashboard.listing.listingLimitExceeded.advancedSettingsLinkText"
                      values={Object {}}
                    />
                  </EuiLink>,
                  "listingLimitText": <strong>
                    listingLimit
                  </strong>,
                  "listingLimitValue": 1,
                  "totalDashboards": 2,
                }
              }
            />
          </p>
        </EuiCallOut>
        <EuiSpacer
          size="m"
        />
        <EuiFlexGroup
          alignItems="stretch"
          component="div"
          direction="row"
          gutterSize="l"
          justifyContent="flexStart"
          responsive={true}
          wrap={false}
        >
          <EuiFlexItem
            component="div"
            grow={true}
          >
            <EuiFieldSearch
              aria-label="Filter dashboards"
              compressed={false}
              data-test-subj="searchFilter"
              fullWidth={true}
              incremental={false}
              isLoading={false}
              onChange={[Function]}
              placeholder="Search…"
              value=""
            />
          </EuiFlexItem>
        </EuiFlexGroup>
        <EuiSpacer
          size="m"
        />
        <EuiBasicTable
          columns={
            Array [
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
                "sortable": true,
              },
              Object {
                "dataType": "string",
                "field": "description",
                "name": "Description",
                "sortable": true,
              },
              Object {
                "actions": Array [
                  Object {
                    "render": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          itemId="id"
          items={
            Array [
              Object {
                "description": "dashboard0 desc",
                "id": "dashboard0",
                "title": "dashboard0 title",
              },
              Object {
                "description": "dashboard1 desc",
                "id": "dashboard1",
                "title": "dashboard1 title",
              },
            ]
          }
          loading={false}
          noItemsMessage={
            <FormattedMessage
              defaultMessage="No dashboards matched your search."
              id="kbn.dashboard.listing.noMatchedDashboardsMessage"
              values={Object {}}
            />
          }
          onChange={[Function]}
          pagination={
            Object {
              "pageIndex": 0,
              "pageSize": 20,
              "pageSizeOptions": Array [
                10,
                20,
                50,
              ],
              "totalItemCount": 2,
            }
          }
          responsive={true}
          selection={
            Object {
              "onSelectionChange": [Function],
            }
          }
          sorting={
            Object {
              "sort": Object {
                "direction": "asc",
                "field": "title",
              },
            }
          }
        />
      </div>
    </EuiPageContent>
  </EuiPageBody>
</EuiPage>
`;

exports[`renders empty page in before initial fetch to avoid flickering 1`] = `
<EuiPage
  className="dshDashboardListing__page"
  data-test-subj="dashboardLandingPage"
  restrictWidth={true}
>
  <EuiPageBody
    restrictWidth={false}
  />
</EuiPage>
`;
